--- a/faq/build.xml
+++ b/faq/build.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 1.1 $ -->
+<!-- $Revision: 1.2 $ -->
 <!-- EN-Revision: 1.26 -->
 <chapter id="faq.build">
-  <title>빌드 시의 문제발생</title>
-  <titleabbrev>빌드 시 발생할수 있는 문제점</titleabbrev>
+  <title>빌드(build)시의 문제</title>
+  <titleabbrev>빌드 시 발생할수 있는 문제</titleabbrev>
 
    <para>
-    이 절은 빌드 시에 가장 자주 발생하는 에러에 대해서 정리한다.
+    이 절은 빌드 시에 가장 자주 발생하는 에러에 대해서 정리합니다.
    </para>
 
   <qandaset>
    <qandaentry id="faq.build.configure">
     <question>
      <para>
-      저는 익명 CVS 서버스에서 PHP의 가장 최종 버전을 가져왔습니다.
+      익명 CVS 서버스에서 PHP의 가장 최종 버전을 가져왔습니다.
       그런데 거기에는 configure 스크립트가 없네요!?
      </para>
     </question>
     <answer>
      <para>
-      님께서는 <filename>configure.in</filename>파일이 configure 스크립트를 생성할수 있도록
+      <filename>configure.in</filename>파일이 configure 스크립트를 생성할수 있도록
       GNU autoconf 패키지가 설치되어 있어야 합니다.
       그리고 나서 CVS 서버에서 소스를 가져오신 후에 최상위 디렉토리에서
       <command>./buildconf</command>명령을 실행하세요. (또한,
@@ -36,14 +36,14 @@
    <qandaentry id="faq.build.configuring">
     <question>
      <para>
-      저는 아파치와 연동하여 PHP 를 설정하려 하는데 문제가 발생합니다.
+      아파치와 연동하여 PHP 를 설정하려 하는데 문제가 발생합니다.
       <filename>httpd.h</filename>를 찾을 수 없다는 군요. 하지만 그 파일은 거기에 있거든요!
      </para>
     </question>
     <answer>
      <para>
-      님은 configure/setup 스크립트에게 아파치 소스 트리의 최상위 디렉토리의 위치를
-      알려줄 필요가 있습니다. 즉, <literal>--with-apache=/path/to/apache</literal>으로
+      configure/setup 스크립트에게 아파치 소스 트리의 최상위 디렉토리의 위치를
+      알려줄 필요가 있습니다. 즉, <literal>--with-apache=/path/to/apache</literal>을
       적어주세요. <literal>--with-apache=/path/to/apache/src</literal>이 <emphasis>아닙니다</emphasis>.
      </para>
     </answer>
@@ -119,7 +119,7 @@
     CPPFLAGS=-I/path/to/include LDFLAGS=-L/path/to/library ./configure
 ]]>
       </programlisting>
-      로그인 셸이 csh계열이라면(왜?) 다음처럼 처리해도됩니다
+      로그인 셸이 csh계열이라면(왜?) 다음처럼 처리합니다
       <programlisting>
 <![CDATA[
     env CPPFLAGS=-I/path/to/include LDFLAGS=-L/path/to/library ./configure
@@ -148,16 +148,16 @@
     <question>
      <para>
       <command>make</command>명령을 실행시킬때, 처음엔 잘나가다가 마지막에서 프로그램을 링크하려고
-      할때 어떤 파일을 찾지 못한다고 하며 종료되어 버립니다.
+      할때 특정 파일을 찾지 못한다고 하며 종료되어 버립니다.
      </para>
     </question>
     <answer>
      <para>
-      make의 구버전 일부는 functions 디렉토리안에 functions 디렉토리에 들어있는
+      make의 구버전 중 일부는 functions 디렉토리안에 functions 디렉토리에 들어있는
       파일을 정확하게 옮겨놓지 못합니다. 
       <command>cp *.o functions</command> 명령을 실행하고 나서
       <command>make</command>명령을 재실행시켜보세요. 
-      이래도 똑같은 증상을 보이면, GNU make 최신버전으로 업그레이드해야할것입니다
+      이래도 똑같은 증상을 보이면, GNU make를 최신버전으로 업그레이드하세요
      </para>
     </answer>
    </qandaentry>
@@ -175,16 +175,14 @@
       빠뜨린 경우가 대부분입니다.
      </para>
      <para>
-      아파치 1.2.x 버전과 함께 설치하는것이라면, 설정파일의 EXTRA_LIBS에
+      아파치 1.2.x 버전과 같이 설치하는것이라면, 설정파일의 EXTRA_LIBS에
       적절한 정보를 추가했는지, 아파치 설정 스크립트를 재실행했는지 확인하세요.
       아파치에 포함되어있는 <ulink url="&url.file.installation;">INSTALL</ulink>파일을
       확인하는것도 도움이 될것입니다.
      </para>
      <para>
-      Some people have also reported that they had to add '-ldl' immediately
-      following <filename>libphp4.a</filename> when linking with Apache.
-      어떤분들의 보고에 따르면 아파치와 같이 설치할때에는 
-       <filename>libphp4.a</filename>파일 다음에 '-ldl'옵션을 추가해야한다고 합니다. 
+      어떤분들의 보고에 따르면 아파치와 같이 설치할때에는 <filename>libphp4.a</filename>파일
+      다음에 '-ldl'옵션을 추가해야한다고 합니다. 
      </para>
     </answer>
    </qandaentry>
@@ -222,13 +220,13 @@
        <listitem>
         <simpara>
          그리고 <command>make</command>명령과 <command>make install</command>명령을 차례대로
-         실행시킵니다. 그러면 아파치의 하위 디렉토리에 필요한 파일들이 복사가 되는것입니다.
+         실행시킵니다. 이것이 완료되면 아파치의 하위 디렉토리에 필요한 파일들이 복사가 되는것입니다.
         </simpara>
        </listitem>
        <listitem>
         <simpara>
          <filename>/&lt;path&gt;/apache-1.3/src</filename>디렉토리로 들어가서
-         <filename>설정</filename>파일을 변경하십시오.
+         <filename>Configuration</filename>파일을 변경하십시오.
          설정 파일에 다음줄을 추가하세요.
          <literal>AddModule modules/php4/libphp4.a</literal>.
         </simpara>
@@ -258,17 +256,17 @@
     <question>
      <para>
       UNIX상에서 아파치 모듈을 인스톨하기 위한 모든 단계를 따라했습니다.
-      그리고 브라우저에서 PHP 스크립트를 보려고하면 저장하겠냐고 물어옵니다.
+      그리고 브라우저에서 PHP 스크립트를 보려고하면 저장하겠냐고 묻습니다.
      </para>
     </question>
     <answer>
      <para>
-      이것은 어떤 이유로 PHP 모듈이 제대로 불려오지 못한 결과입니다.
+      이것은 어떤 이유로 PHP 모듈을 제대로 불려오지 못한 결과입니다.
       우선은 다음의 세가지 경우를 체크하시기 바랍니다
       <itemizedlist>
        <listitem>
         <simpara>
-         현재 실행되는있는 아파치의 실행파일이 새로 빌드된 실행파일인지
+         현재 실행되고있는 아파치의 실행파일이 새로 빌드된 실행파일인지
          확인해야 합니다. 다음 명령을 실행하세요
          <literal>/path/to/binary/httpd -l</literal>
         </simpara>
@@ -311,9 +309,9 @@
     <question>
      <para>
       <literal>--activate-module=src/modules/php4/libphp4.a</literal>옵션으로
-      실행하라고 하지만 그 파일은 존재하지않았다. 그래서 
+      실행하라고 하지만 그 파일은 존재하지않습니다. 그래서 
       <literal>--activate-module=src/modules/php4/libmodphp4.a</literal>으로
-      변경을 했다. 근데, 제대로 설치가 안된다!? 무엇이 잘못된것인가?
+      변경을 했습니다. 근데, 제대로 설치가 안되네요!? 무엇이 잘못되었나요?
      </para>
     </question>
     <answer>
@@ -330,7 +328,7 @@
       PHP를 정적인 모듈로 아파치와 연동하려고 
       <literal>--activate-module=src/modules/php4/libphp4.a</literal> 
       옵션으로 빌드하려 했습니다.
-      그런데 컴파일러가 ANSI 호환이 아니라는 나옵니다.
+      그런데 컴파일러가 ANSI 호환이 아니라고 나옵니다.
      </para>
     </question>
     <answer>
@@ -364,7 +362,7 @@ my $CFG_LD_SHLIB      = ' ';          # substituted via Makefile.tmpl
 my $CFG_LDFLAGS_SHLIB = ' ';          # substituted via Makefile.tmpl
 ]]>
       </programlisting>
-      이것과 똑같다면 그것이 바로 문제입니다. 공백이나 잘못된 값이
+      이렇게 되어있다면 이것이 바로 문제입니다. 이외에 공백이나 잘못된 값이
       채워져있을수 있습니다. 예를 들어서 'q()' 같은 경우입니다.
       이 줄들은 다음으로 변경합니다
       <programlisting>
@@ -381,7 +379,7 @@ my $CFG_LDFLAGS_SHLIB = q(-shared);              # substituted via Makefile.tmpl
 my $CFG_LIBEXECDIR    = 'modules';         # substituted via APACI install
 ]]>
       </programlisting>
-      이와 같다면 다음으로 변경합니다
+      이렇다면 다음으로 변경합니다
       <programlisting>
 <![CDATA[
 my $CFG_LIBEXECDIR    = '/usr/lib/apache'; # substituted via APACI install
@@ -389,7 +387,7 @@ my $CFG_LIBEXECDIR    = '/usr/lib/apache'; # substituted via APACI install
       </programlisting>
        마지막으로, 아파치를 재설정/재설치했을경우에  <command>make clean</command> 명령을
        <command>./configure</command> 명령 후와  <command>make</command> 명령 전에
-       실행해보라는 것입니다.
+       실행해보는 것입니다.
      </para>
     </answer>
    </qandaentry>
@@ -397,10 +395,8 @@ my $CFG_LIBEXECDIR    = '/usr/lib/apache'; # substituted via APACI install
    <qandaentry id="faq.build.microtime">
     <question>
      <para>
-      During <command>make</command>, I get errors in microtime, 
-      and a lot of <literal>RUSAGE_</literal> stuff.
-      <command>make</command>명령 실행 중에 몇몇의 에러와
-      많은 수의 <literal>RUSAGE_</literal>관련 메시지를 봅니다.
+      <command>make</command>명령 실행 중에 몇몇개의 에러메시지와
+      많은 <literal>RUSAGE_</literal>관련 에러 메시지가 발생합니다.
     </para>
     </question>
     <answer>
