--- a/faq/build.xml
+++ b/faq/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 1.2 $ -->
+<!-- $Revision: 1.3 $ -->
 <!-- EN-Revision: 1.26 -->
 <chapter id="faq.build">
   <title>빌드(build)시의 문제</title>
@@ -499,6 +499,26 @@ $ gcc -E test.c >/dev/null
     </answer>
    </qandaentry>   
    
+   <qandaentry id="faq.installation.needgnu">
+    <question>
+     <para>
+      When compiling PHP I seemingly get random errors, like it hangs.
+      I'm using Solaris if that matters.
+     </para>
+    </question>
+    <answer>
+     <para>
+      Using non-GNU utilities while compiling PHP may cause problems.  Be
+      sure to use GNU tools in order to be certain that compiling PHP will
+      work.  For example, on Solaris, using either the SunOS BSD-compatible
+      or Solaris versions of <literal>sed</literal> will not work, but using
+      the GNU or Sun POSIX (xpg4) versions of <literal>sed</literal> will
+      work.  Links: <ulink url="&url.sed;">GNU sed</ulink>,
+      <ulink url="&url.flex;">GNU flex</ulink>, and
+      <ulink url="&url.bison;">GNU bison</ulink>.
+     </para>
+    </answer>
+   </qandaentry>
   </qandaset>
  </chapter>
 
