--- a/faq/build.xml
+++ b/faq/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 1.3 $ -->
-<!-- EN-Revision: 1.26 -->
+<!-- $Revision: 1.4 $ -->
+<!-- EN-Revision: 1.26 Maintainer: fuzzy74 Status: ready -->
 <chapter id="faq.build">
   <title>빌드(build)시의 문제</title>
   <titleabbrev>빌드 시 발생할수 있는 문제</titleabbrev>
